--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,14 @@
+Fri Oct  4 02:06:15 2002  Tim Janik  <timj@gtk.org>
+
+	* sfidl.cc (createTypeCode): support SfiBBlock.
+
+	* sfiprimitives.[hc]: add SfiBBlock, a block of bytes,
+	similar to SfiFBlock.
+
+	* sfivalues.[hc]: implement BBlock values.
+	
+	* sfiparams.[hc]: implement BBlock pspecs.
+
 Fri Oct  4 01:18:21 2002  Stefan Westerfeld <stefan@space.twc.de>
 
         * sfi/sfidl.cc: generate proper default initialization for sequences when
