--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Fri Oct  4 12:41:33 2002  Stefan Westerfeld <stefan@space.twc.de>
+
+	* sfidl.cc: generate conversion functions for sequences/records
+	from/to SfiSeq*/SfiRec* instead of from/to GValue*.
+
 Fri Oct  4 11:30:07 2002  Stefan Westerfeld <stefan@space.twc.de>
 
 	* sfidl.cc: support namespace substitution (sfidl -n Bse/Bsw)
