--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,7 @@
+Wed Oct 23 20:28:01 2002  Tim Janik  <timj@gtk.org>
+
+	* sfiprimitives.h: provide convenience setters for record fields.
+
 Wed Oct 23 19:25:40 2002  Tim Janik  <timj@gtk.org>
 
 	* sfivalues.[hc]:
